# android_apps_egui

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  data.rs  lib.rs  main.rs
src/icon/: Mobile Alt Icon Font Awesome.URL  make_ico.py
