[package]
name = "android_apps_egui"
version = "0.1.0"
authors = ["Keegan Conlee <dacid44@gmail.com>"]
edition = "2021"
rust-version = "1.56"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4.0"
native-dialog = "0.6.2"

futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = "0.11.9"
scraper = "0.12.0"
image = "0.23.14"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = ["persistence"]
persistence = ["eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
